objects/simpli_lv__List_View_Config_Condition__c.object
<CustomObject>
    <fields>
        <fullName>simpli_lv__Field_Name__c</fullName>
        <description>The field label that corresponds to the column being validated against.</description>
        <inlineHelpText>The field label that corresponds to the column being validated against.</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Highlight_Color__c</fullName>
        <description>The color the row should be highlighted in. This value should correspond to an HTML formatted color code. i.e. #FFFFFF = white, #000000 = black, #D43230 = red etc. If no color is set a default lightning color is used.</description>
        <inlineHelpText>The color the row should be highlighted in. This value should correspond to an HTML formatted color code. i.e. #FFFFFF = white, #000000 = black, #D43230 = red etc. If no color is set a default lightning color is used.</inlineHelpText>
        <label>Highlight Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__List_View_Config__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>List View Config</label>
        <referenceTo>simpli_lv__List_View_Config__c</referenceTo>
        <relationshipLabel>List View Config Conditions</relationshipLabel>
        <relationshipName>List_View_Config_Conditions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Operator__c</fullName>
        <label>Operator</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equals</fullName>
                </value>
                <value>
                    <fullName>Not Equal</fullName>
                </value>
                <value>
                    <fullName>Greater Than</fullName>
                </value>
                <value>
                    <fullName>Less Than</fullName>
                </value>
                <value>
                    <fullName>Contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simpli_lv__Order__c</fullName>
        <description>Identifies the order in which the conditions are applied. If two conditions match the last condition will take precedence.</description>
        <inlineHelpText>Identifies the order in which the conditions are applied. If two conditions match the last condition will take precedence.</inlineHelpText>
        <label>Order</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simpli_lv__Value__c</fullName>
        <description>The value of the condition that must be met.</description>
        <inlineHelpText>The value of the condition that must be met.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>List View Config Condition</label>
    <listViews>
        <fullName>simpli_lv__All</fullName>
        <columns>NAME</columns>
        <columns>simpli_lv__Value__c</columns>
        <columns>simpli_lv__Order__c</columns>
        <columns>simpli_lv__Operator__c</columns>
        <columns>simpli_lv__List_View_Config__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LVCC-{0}</displayFormat>
        <label>List View Config Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List View Config Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>